unpackaged/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Countries the opportunity is for</description>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>