unpackaged/main/default/objects/Opportunity/fields/CPT__c.field-meta.xml
<CustomField>
    <fullName>CPT__c</fullName>
    <label>CPT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>