unpackaged/main/default/objects/Opportunity/fields/Media_Cost__c.field-meta.xml
<CustomField>
    <fullName>Media_Cost__c</fullName>
    <description>Amount spent on this media</description>
    <label>Media Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>