unpackaged/main/default/objects/Opportunity/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <description>Date of the next step to be taken</description>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>