unpackaged/main/default/objects/Opportunity/recordTypes/Affiliate_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Affiliate_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Affiliate %26 Partnerships Process</businessProcess>
    <label>Affiliate Opportunity</label>
</RecordType>