unpackaged/main/default/objects/Opportunity/recordTypes/Agency_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Agency_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Affiliate %26 Partnerships Process</businessProcess>
    <label>Agency Opportunity</label>
</RecordType>