unpackaged/main/default/objects/Opportunity/recordTypes/Influencer_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Influencer_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Affiliate %26 Partnerships Process</businessProcess>
    <label>Influencer Opportunity</label>
</RecordType>