unpackaged/main/default/objects/Opportunity/recordTypes/Partner_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Partner_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Affiliate %26 Partnerships Process</businessProcess>
    <label>Partner Opportunity</label>
</RecordType>